<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp">

    <TextView
        android:id="@+id/development"
        android:layout_width="200dp"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:text="@string/development"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"
        android:maxLines="1"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/development"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:text="@string/area"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/carpark_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/development"
        android:layout_toEndOf="@+id/area"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/carpark_id"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/car_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/area"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/car_icon"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/map_image"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/map_icon"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/num_of_lots"
        android:layout_toEndOf="@+id/car_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="10dp"
        android:text="@string/num_of_lots"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/map_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map_image"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:text="@string/map_hint"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentBottom="true"
        android:background="#808080"/>

</RelativeLayout>