<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/display_carparks_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/display_carparks_button"
        app:layout_constraintBottom_toTopOf="@+id/carpark_input_et"
        app:layout_constraintEnd_toStartOf="@+id/search_carpark_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_carpark_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/search_carpark_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/display_carparks_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/carpark_input_et"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/carpark_input_et"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_carparks_btn" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/carparks_report_rv"
        android:layout_width="0dp"
        android:layout_height="550dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carpark_agencies_rg">

    </androidx.recyclerview.widget.RecyclerView>


    <RadioGroup
        android:id="@+id/carpark_agencies_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:checkedButton="@+id/lta_rb"
        app:layout_constraintBottom_toTopOf="@+id/carparks_report_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carpark_input_et">

        <RadioButton
            android:id="@+id/lta_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lta_rb" />

        <RadioButton
            android:id="@+id/hdb_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hdb_rb" />

        <RadioButton
            android:id="@+id/ura_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ura_rb" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>